fix whitespace

--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ body {
     .img-group img {
         max-width: var(--size-152);
         border-radius: var(--size-8);
-        object-fit: contain;
+        object-fit: cover;
     }
 
     .main-content {
